[gd_scene load_steps=4 format=3 uid="uid://6t02gfo1lyg"]

[ext_resource type="Script" uid="uid://c00q201416tr" path="res://opening screen/opening_screen.gd" id="1_les45"]
[ext_resource type="Texture2D" uid="uid://dlwle134vyjam" path="res://rps game stuff/opening screen.PNG" id="1_xmhvo"]
[ext_resource type="FontFile" uid="uid://bu6t45u86xt7f" path="res://rps game stuff/Pixel Digivolve.otf" id="3_kt4sk"]

[node name="opening screen" type="Node2D"]
script = ExtResource("1_les45")

[node name="opening bg" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_xmhvo")

[node name="play button" type="Button" parent="."]
offset_left = 397.0
offset_top = 301.0
offset_right = 889.0
offset_bottom = 338.0
flat = true

[node name="settings button" type="Button" parent="."]
offset_left = 397.0
offset_top = 376.0
offset_right = 889.0
offset_bottom = 413.0
flat = true

[node name="load button" type="Button" parent="."]
offset_left = 397.0
offset_top = 451.0
offset_right = 889.0
offset_bottom = 489.0
flat = true

[node name="help button" type="Button" parent="."]
offset_left = 396.0
offset_top = 527.0
offset_right = 888.0
offset_bottom = 564.0
flat = true

[node name="quit button" type="Button" parent="."]
offset_left = 398.0
offset_top = 601.0
offset_right = 889.0
offset_bottom = 639.0
flat = true

[node name="win count" type="Label" parent="."]
offset_left = 1113.0
offset_top = 13.0
offset_right = 1269.0
offset_bottom = 52.0
theme_override_colors/font_outline_color = Color(0.14901961, 0.31764707, 0.2901961, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_kt4sk")
theme_override_font_sizes/font_size = 32
text = "wins: 0"
horizontal_alignment = 1
autowrap_mode = 3

[connection signal="pressed" from="play button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="settings button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="load button" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="help button" to="." method="_on_help_button_pressed"]
[connection signal="pressed" from="quit button" to="." method="_on_quit_button_pressed"]
